--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
-/*font-family: 'Shadows Into Light', cursive;
- font-family: 'Indie Flower', cursive;
+/*font-family: 'Libre Franklin', sans-serif;
+font-family: 'Chivo', sans-serif;
 */
 
 #contenidos{
@@ -20,25 +20,34 @@ background-size: cover;
 }
 
 h1{
-font-family: 'Shadows Into Light', cursive;
-color: white;
+font-family: 'Libre Franklin', sans-serif;;
+color: #004466;
 margin-left: 10px;
-font-size: 60px;
+font-size: 30px;
 text-align: center; 
+
 }
 
 h2{
-font-family: 'Indie Flower', cursive;
-color: white;
+font-family: 'Libre Franklin', sans-serif;;
+color: black;
 margin-left: 10px;
 font-size: 20px;
 text-align: left; 
 }
 
 h3{
-font-family: 'Shadows Into Light', cursive;;
-color: white;
-font-size: 30px;
+font-family: 'Libre Franklin', sans-serif;;
+color: black;
+font-size: 18px;
+text-align: center; 
+}
+
+h4{
+font-family: 'Chivo', sans-serif;;
+color: black;
+margin-left: 10px;
+font-size: 20px;
 text-align: center; 
 }
 
@@ -47,34 +56,42 @@ header{
 	width: 1000px;
 	height: 120 px;
 	background: rgba(255, 255, 255, 10,70);
+	text-align: center; 
+
 }
 
 nav{
 width: 1000px;
-height: 50px;
-background: red;
+height: 65px;
+background: white;
 border-radius: 10px;
+
 
 }
 ul{
+font-family: 'Libre Franklin', sans-serif;;
+color: black;
+margin-left: 10px;
+font-size: 20px; 
 margin: auto;
 padding-top: 4px;
+text-align: center; 
 }
 
 li{
 	float: left;
 	list-style-type: none;
 	padding: 10px;
-	background: black;
+	background: #004466;
 	margin: 3px;
 	border-radius: 10px;
-	box-shadow: 0 0 10px white inset; 
+	box-shadow: 0 0 10px black inset; 
 
 }
 
 section{
 	width: 700px;
-	background: gray;
+	background: #4682B4;
 	height: 600px;
 	float: left;
 	margin-top: 20px;
@@ -83,29 +100,31 @@ section{
 aside{
 
 	width: 280px;
-	background: white;
+	background: #4682B4;
 	height: 600px;
 	float: left;
 	margin-left: 20px;
 	margin-top: 20px;
 	border-radius: 10px;
+
 }
 
 footer{
 width: 1000px;
 height: 70px;
-background: maroon;
+background: #4682B4;
 float: left;
 margin-top: 20px;
 border-radius: 10px;
 margin-bottom: 20px;
+
 }
 
 p{
 
-	font-size: 15px;
+	font-size: 13px;
 	font-weight: bolder;
-	line-height: 24px;
+	line-height: 18px;
 	padding: 10px;
 	text-align: justify;
 }
